fix z-index

--- a/client/src/components/Tables.scss
+++ b/client/src/components/Tables.scss
@@ -201,6 +201,7 @@
             display: none;
             position: absolute;
             padding-bottom: 1rem;
+            z-index: 15;
 
             .nextOpponent,
             .formOpponent {
